trying to fix the logo on mobile

--- a/bytesizenewsng/app/app.css
+++ b/bytesizenewsng/app/app.css
@@ -65,5 +65,5 @@
 }
 
 .logo {
-    width: 10%;
+    max-width:50%;
 }
